[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/SEGA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Pause menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 1 )

[node name="Pause menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_top = 100
custom_constants/margin_left = 300
custom_constants/margin_bottom = 100
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 300.0
margin_top = 100.0
margin_right = 724.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 417.0
margin_bottom = 393.0
custom_constants/separation = 40
alignment = 1

[node name="Continue" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 410.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.470588, 0.564706, 0.466667, 1 )
custom_colors/font_color = Color( 0.490196, 0.941176, 0.329412, 1 )
custom_colors/font_color_hover = Color( 0.627451, 0.890196, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.129412, 0.992157, 0.105882, 1 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 410.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.505882, 0.419608, 0.419608, 1 )
custom_colors/font_color = Color( 0.886275, 0.423529, 0.423529, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.694118, 0.694118, 1 )
custom_colors/font_color_pressed = Color( 0.968627, 0.0980392, 0.0980392, 1 )
text = "Exit"
flat = true

[node name="AcceptDialog" type="ConfirmationDialog" parent="."]
margin_left = 300.0
margin_top = 100.0
margin_right = 724.0
margin_bottom = 158.0
rect_min_size = Vector2( 150, 52.5 )
size_flags_vertical = 0
window_title = "Warning"
dialog_text = "Are you sure? You're about to exit."
[connection signal="pressed" from="PanelContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
